kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app1
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app1
  template:
    metadata:
      labels:
        app: flask-app1
    spec:
      containers:
        - name: flask-app1
          image: public.ecr.aws/o0y6x7h1/sampleapp/flask-app1:latest
          ports:
            - containerPort: 5000
