kubernetes/app-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app1
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app1
  template:
    metadata:
      labels:
        app: flask-app1
    spec:
      containers:
        - name: flask-app1
          image: public.ecr.aws/o0y6x7h1/sampleapp/flask-app1:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app1-service
  namespace: flask-app
spec:
  selector:
    app: flask-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-redirect
  namespace: flask-app
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  type: NodePort
  ports:
    - name: use-annotation
      port: 80
      targetPort: use-annotation
