kubernetes/inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
      - name: inventory-app
        image: public.ecr.aws/o0y6x7h1/sampleapp/inventory-app:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-app
  namespace: flask-app-ns
spec:
  selector:
    app: inventory-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
