kubernetes/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
      - name: order-app
        image: public.ecr.aws/o0y6x7h1/sampleapp/order-app:latest # Replace with your ECR image
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-app
  namespace: flask-app
spec:
  selector:
    app: order-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
