kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app1-service
  namespace: flask-app
spec:
  selector:
    app: flask-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
