kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
      - name: user-app
        image: public.ecr.aws/o0y6x7h1/sampleapp/user-app:latest 
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-app
  namespace: flask-app
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP
