kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-apps-ingress
  namespace: flask-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:783764578905:certificate/36b1d0b3-f1f0-47eb-9901-ce4f68a84775 
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  tls:
  - hosts:
    - "*.cave-jarvis.com" 
  rules:
  - http: # Rule for HTTP traffic
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect # Use the redirect service
            port:
              name: use-annotation
  - host: flask-app1.cave-jarvis.com # Hostname for app1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app1-service # Service for app1
            port:
              number: 80
  - host: user.cave-jarvis.com # Hostname for app2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-app # Service for app2
            port:
              number: 80
  - host: inventory.cave-jarvis.com # Hostname for app3
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-app # Service for app3
            port:
              number: 80
  - host: order.cave-jarvis.com # Hostname for order service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-app
            port:
              number: 80
